removed resource wrap, it was causing issues and was unnecessary

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -146,11 +146,7 @@ form {
     margin: 0 auto;
 }
 
-.resource-wrap {
-    height: 100%;
-    width: 200px;
-    margin: 0 auto;
-}
+
 
 .resource-p {
     height: 150px;
